# mahlowatfragen

./: .gitignore  Cargo.toml  data.json  data.json.example  todo.txt  tokens.json  urls.txt
src/: converter.rs  data.rs  main.rs  server.rs
