[package]
name = "mahlowatfragen"
version = "0.1.0"
authors = ["Michael Kreuzer <m-git@kreuzers.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = {version ="1", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
rand = "0.7"
clap = { version = "4", features = ["derive"] }
thiserror = "1.0.40"
